# jam

./: Cargo.toml  README.md
src/: main.rs
src/templates/: bootstrap.html  db_conf.php  index.html  jwt.php  jwt_conf.php  style.css  tailwind.html
