[package]
name = "jam"
description = "A tool jampacked to automate creating web projects"
version = "0.2.0"
edition = "2021"
license = "MIT"
publish = false
authors = ["Julius de Boer"]

[dependencies]
anyhow = "1.0"
colored = "2.0.0"
dialoguer = "0.10"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking"] }
